Fix portal content is not showing in mobile

--- a/portal/src/ReactApp.module.css
+++ b/portal/src/ReactApp.module.css
@@ -2,5 +2,5 @@
   width: 100vw;
   height: 100vh;
 
-  @apply mobile:h-auto mobile:w-auto mobile:min-h-screen;
+  @apply mobile:h-full mobile:w-auto mobile:min-h-screen;
 }
